rgbds-0.6.1/test/asm/nested-macrodef.err
warning: nested-macrodef.asm(26) -> nested-macrodef.asm::outer(22): [-Wuser]
    Nested macros shouldn't work, whose argument would be \1?
error: nested-macrodef.asm(26) -> nested-macrodef.asm::outer(24):
    Unterminated macro definition
error: nested-macrodef.asm(27):
    Macro "inner" not defined
error: Assembly aborted (2 errors)!
